--- a/Unit11/scss/_large.scss
+++ b/Unit11/scss/_large.scss
@@ -30,7 +30,7 @@ main{
 
 header {
     background-size: cover;
-
+    padding-left: .6rem;
 }
 
 header h1 {
