--- a/Unit11/scss/_small.scss
+++ b/Unit11/scss/_small.scss
@@ -1,7 +1,7 @@
 //Header settings
 
 header {
-    padding: 1rem 0 .5rem .5rem;
+    padding: 0;
     color: black;
     background-color: white;
 }
@@ -103,7 +103,7 @@ body {
 
 main {
     padding: 0 2% 0 2%;
-    
+
 }
 
 main h1 {
@@ -118,12 +118,12 @@ p {
     font-family: $fontFamily;
 }
 
-main h2{
+main h2 {
     font-size: 1rem;
     margin: 0 0 .5rem 0;
 }
 
-main p{
+main p {
     margin-bottom: 2rem;
 }
 
@@ -139,7 +139,7 @@ main img {
 }
 
 #headWrapper {
-    grid-area: theHeader
+    grid-area: theHeader;
 }
 
 #mainNav {
